--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.0.0</version>
+            <version>6.14.3</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -58,6 +58,14 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.TestRailAPI</groupId>
+            <artifactId>TestRailAPI</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <systemPath>
+                /Users/ajith.athithyan/Documents/Projects_Flipkart/TestRailAPI/target/TestRailAPI-1.0-SNAPSHOT.jar
+            </systemPath>
         </dependency>
     </dependencies>
 </project>
