--- a/pom.xml
+++ b/pom.xml
@@ -63,9 +63,7 @@
             <groupId>com.TestRailAPI</groupId>
             <artifactId>TestRailAPI</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <systemPath>
-                /Users/ajith.athithyan/Documents/Projects_Flipkart/TestRailAPI/target/TestRailAPI-1.0-SNAPSHOT.jar
-            </systemPath>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
